--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-chat-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ptanh311.github.io/chat-app/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
