--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "new-chat-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
